add animation effect using framer motion

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,6 @@
 
 @layer components{
   .hoverEffect{
-    @apply cursor-pointer hover:bg-gray-200 rounded-full w-[52px] xl:w-auto h-[52p] xl:h-auto xl:p-3
+    @apply cursor-pointer hover:bg-gray-200 rounded-full w-[52px] xl:w-auto h-[52p] xl:h-auto xl:p-3 transition duration-1000 ease-out
   }
 }
